--- a/service-client1/src/main/resources/application.yml
+++ b/service-client1/src/main/resources/application.yml
@@ -1,11 +1,27 @@
 server:
-  port: 8763
+  port: 8764
 
 spring:
   application:
     name: service-client1
+  zipkin:
+    base-url: http://localhost:9411
+  datasource:
+    url: jdbc:mysql://localhost:3306/test
+    username : root
+    password: 123456
+    driverClassName: com.mysql.jdbc.Driver
+  jpa:
+    database: MYSQL
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect : org.hibernate.dialect.MySQL5Dialect
 
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+      
